updateCriminal now works

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
       </div>
     </form>
 
-    <form class="form-criminal" ng-submit="editCriminal()">
+    <form class="form-criminal" ng-submit="updateCriminal()">
       <h4>Edit Criminal</h4>
       <div>
         <label for="edit-criminal-name">Name: </label>
